# tux

./: .gitignore  CMakeLists.txt  README.md  dat  jsconfig.json  make.cmd  opencv  test.js
core/: Mat.js  Tux.js  Win.js  a.js
duktape/: CMakeLists.txt
src/: bindings.hpp  duk.hpp  duk_module_resolve_init.hpp  fs.hpp  httplib.h  log.hpp  main.cpp  path.hpp  struct.hpp
src/core/: capture.hpp  mat.hpp  mouse.hpp  win.hpp
typings/core/: mat.d.ts  tux.d.ts  win.d.ts
typings/globals/: duktape.d.ts  index.d.ts
